logos added to img folder

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <h2>Sitios de interés</h2>
   </section>
   <footer>
-    <div id="footer-container" style="position:fixed; top:0; left:0; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62">
-      
+    <div id="footer-container" style="position:fixed; bottom:0; left:0; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
+
     </div>
   </footer>
 </body>
