--- a/index.html
+++ b/index.html
@@ -71,8 +71,33 @@
     <h2>Sitios de interés</h2>
   </section>
   <footer>
-    <div id="footer-container" style="position:fixed; bottom:0; left:0; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
+    <div id="footer-container" style="position:fixed; bottom:0; left:0; width:100vw; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
+      <div id="footer-logos" style="display: flex;">
+        <img src="images/socials/instagram.svg" alt="logo instagram" style="height:30px">
+        <img src="images/socials/twitter.svg" alt="logo twitter" style="height:30px">
+        <img src="images/socials/github.svg" alt="logo github" style="height:30px">
+      </div>
+      <div id="footer-direccion">
+        <h5>
+          Dónde encontrarme
+        </h5>
+        <p style="color:#058F62;">
+          Avenida Príncipe de Asturias, 6 <br>
+          Portal 8,1º B <br>
+          Villaviciosa de Odón <br>
+          28670 Madrid
 
+        </p>
+      </div>
+      <div id="footer-enlaces">
+        <h5>Enlaces útiles</h5>
+        <ul>
+          <li>Aviso legal</li>
+          <li>Términos y condiciones</li>
+          <li>Política de cookies</li>
+          <li>Política de privacidad</li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
