--- a/index.html
+++ b/index.html
@@ -29,25 +29,28 @@
     </div>
   </header>
   <section id="intro">
-    <article id="intro-container">
-      <div id="name-container">
-        <h1 id="name">
-          ADRIÁN <br> DÍEZ
-        </h1>
+    <article id="intro-container" style="width:90vw;background:#021C2C; margin:0 auto;margin-left: 50px;
+    margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;">
+      <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
+        <div id="name-container" style="float:left; width:50vw;">
+          <h1 id="name" style="text-align:center; color:#0AC88A; font-size:3em">
+            ADRIAN <br> DIEZ
+          </h1>
+        </div>
       </div>
-      <div id="description-container">
+      <div id="description-container" style="margin-top: 40px; padding: 12px; color:#058F62">
         <ul>
           <li>Full Stack Programmer</li>
           <li>Front and Back End Developer</li>
           <li>Data Analyst</li>
         </ul>
       </div>
-      <div id="photo-container">
+      <div id="photo-container" style="width:480px;height:320px;border:1px solid #0AC88A; position:absolute; right:160px;top:200px">
         photo/video
       </div>
       <div id="cta-container">
-        <div class="cta-btn">Explorar</div>
-        <div class="cta-btn">Contrata mis servicios</div>
+        <span class="cta-btn">Explorar</span>
+        <span class="cta-btn">Contrata mis servicios</span>
       </div>
     </article>
   </section>
@@ -71,11 +74,16 @@
     <h2>Sitios de interés</h2>
   </section>
   <footer>
-    <div id="footer-container" style="position:fixed; bottom:0; left:0; width:100vw; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
-      <div id="footer-logos" style="display: flex;">
-        <img src="images/socials/instagram.svg" alt="logo instagram" style="height:30px">
-        <img src="images/socials/twitter.svg" alt="logo twitter" style="height:30px">
-        <img src="images/socials/github.svg" alt="logo github" style="height:30px">
+   
+    <div id="footer-container" style="position:fixed; bottom:0; left:0; width:100vw;display:flex;align-items: center; justify-content: space-around;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
+      <div id="footer-enlaces">
+        <h5>Enlaces útiles</h5>
+        <ul>
+          <li>Aviso legal</li>
+          <li>Términos y condiciones</li>
+          <li>Política de cookies</li>
+          <li>Política de privacidad</li>
+        </ul>
       </div>
       <div id="footer-direccion">
         <h5>
@@ -86,18 +94,15 @@
           Portal 8,1º B <br>
           Villaviciosa de Odón <br>
           28670 Madrid
-
+          
         </p>
       </div>
-      <div id="footer-enlaces">
-        <h5>Enlaces útiles</h5>
-        <ul>
-          <li>Aviso legal</li>
-          <li>Términos y condiciones</li>
-          <li>Política de cookies</li>
-          <li>Política de privacidad</li>
-        </ul>
+      <div id="footer-logos" style="display: flex;">
+        <img src="images/socials/instagram.svg" alt="logo instagram" style="height:30px">
+        <img src="images/socials/twitter.svg" alt="logo twitter" style="height:30px">
+        <img src="images/socials/github.svg" alt="logo github" style="height:30px">
       </div>
+      
     </div>
   </footer>
 </body>
