--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Adrian Diez</title>
 </head>
-<body style="height:100vh; margin:0">
+<body style="margin:0">
   <header>
     <div id="header" style="position:sticky; top:0; left:0; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62">
       <div id="logo">
@@ -29,7 +29,7 @@
     </div>
   </header>
   <section id="intro">
-    <article id="intro-container" style="width:90vw;background:#021C2C; margin:0 auto;margin-left: 50px;
+    <article id="intro-container" style="width:80vw;background:#021C2C;margin-right: 10vw;
     margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;">
       <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
         <div id="name-container" style="float:left; width:50vw;">
@@ -45,37 +45,52 @@
           <li>Data Analyst</li>
         </ul>
       </div>
-      <div id="photo-container" style="width:480px;height:320px;border:1px solid #0AC88A; position:absolute; right:160px;top:200px">
-        photo/video
+      <div id="photo-container" style="width:480px;height:320px; position:absolute; right:260px;top:200px">
+        <ul class="slideshow">
+          <li><span></span></li>
+          <li><span></span></li>
+          <li><span></span></li>
+          <li><span></span></li>
+          <li><span></span></li>
+        </ul>
       </div>
-      <div id="cta-container">
-        <span class="cta-btn">Explorar</span>
+      <div id="cta-container" style="position: relative;
+      left: 342px;
+      bottom: 34px;">
+        <a href="#prod-present"><span class="cta-btn">Explorar</span></a>
         <span class="cta-btn">Contrata mis servicios</span>
       </div>
     </article>
   </section>
-  <section id="news">
+  <section id="news"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
+  margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
+    <h1 style="color:#0AC88A">Tech news</h1>
     <div>
-      <h2 id="news-title">
+      <h2 id="news-title" style="color:#0AC88A">
         GPT-4 destroza a ChatGPT en exámenes universitarios, ¿pero realmente importa?
       </h2>
       <h4 id="news-subtitle">
         Según OpenAI, GPT-4 es todavía mejor que ChatGPT para aprobar exámenes universitarios y de posgrado. Un logro impactante, sin dudas, pero que al final del día sigue sin importar demasiado.
       </h4>
-      <div class="cta-btn">Leer más</div>
+      <div class="cta-btn" style="color:#000">Leer más</div>
 
 
     </div>
   </section>
-  <section id="prod-present">
-    <h2>Descubre algunos de mis proyectos</h2>
+  <section id="prod-present" style="width:80vw;background:#021C2C;margin-right: 10vw;
+  margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3; padding:2rem">
+    <h2 style="color:#0AC88A">Descubre algunos de mis proyectos</h2>
   </section>
-  <section id="sitios-de-interes">
+  <section id="sitios-de-interes" style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
+  margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
     <h2>Sitios de interés</h2>
+    Para aprender a programar <br>
+    Para practicar <br>
+    Para ---
   </section>
   <footer>
    
-    <div id="footer-container" style="position:fixed; bottom:0; left:0; width:100vw;display:flex;align-items: center; justify-content: space-around;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
+    <div id="footer-container" style="width:100vw;display:flex;align-items: center; justify-content: space-around;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
       <div id="footer-enlaces">
         <h5>Enlaces útiles</h5>
         <ul>
