--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       left: 342px;
       bottom: 34px;">
         <a href="#prod-present"><span class="cta-btn">Explorar</span></a>
-        <span class="cta-btn">Contrata mis servicios</span>
+        <a href="/views/presupuesto.html"><span class="cta-btn">Contrata mis servicios</span></a>
       </div>
     </article>
   </section>
