--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li>Home</li>
+          <li style="color:var(--secondary-light-2)"><strong>Home</strong></li>
           <li>Work</li>
           <li>About</li>
         </ul>
