--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Adrian Diez</title>
 </head>
@@ -80,6 +82,32 @@
   <section id="prod-present" style="width:80vw;background:#021C2C;margin-right: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3; padding:2rem">
     <h2 style="color:#0AC88A">Descubre algunos de mis proyectos</h2>
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/products/reboot-driver.png" class="d-block w-80 center" alt="Videojuego de conducción">
+        </div>
+        <div class="carousel-item">
+          <img src="images/products/outfit-nova.png" class="d-block w-60 center" alt="App de e-commerce">
+        </div>
+        <div class="carousel-item">
+          <img src="images/products/class-royale.gif" class="d-block w-80 center" alt="App de gestión de clases">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </section>
   <section id="sitios-de-interes" style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
