view created for each of the products
images in carousel anchored to views

--- a/index.html
+++ b/index.html
@@ -90,13 +90,19 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/products/reboot-driver.png" class="d-block w-80 center" alt="Videojuego de conducción">
+          <a href="views/products/reboot-driver.html">
+            <img src="images/products/reboot-driver.png" class="d-block w-80 center" alt="Videojuego de conducción">
+          </a>
         </div>
         <div class="carousel-item">
-          <img src="images/products/outfit-nova.png" class="d-block w-60 center" alt="App de e-commerce">
+          <a href="views/products/outfit-nova.html">
+            <img src="images/products/outfit-nova.png" class="d-block w-60 center" alt="App de e-commerce">
+          </a>
         </div>
         <div class="carousel-item">
-          <img src="images/products/class-royale.gif" class="d-block w-80 center" alt="App de gestión de clases">
+          <a href="views/products/class-royale.html">
+            <img src="images/products/class-royale.gif" class="d-block w-80 center" alt="App de gestión de clases">
+          </a>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
