hover filter fixed

--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <a href="views/products/reboot-driver.html">
-            <img src="images/products/reboot-driver.png" class="d-block w-80 center" alt="Videojuego de conducción">
+            <img src="images/products/reboot-driver.png" class="d-block w-80 center carousel-link" alt="Videojuego de conducción">
           </a>
         </div>
         <div class="carousel-item">
           <a href="views/products/outfit-nova.html">
-            <img src="images/products/outfit-nova.png" class="d-block w-60 center" alt="App de e-commerce">
+            <img src="images/products/outfit-nova.png" class="d-block w-60 center carousel-link" alt="App de e-commerce">
           </a>
         </div>
         <div class="carousel-item">
           <a href="views/products/class-royale.html">
-            <img src="images/products/class-royale.gif" class="d-block w-80 center" alt="App de gestión de clases">
+            <img src="images/products/class-royale.gif" class="d-block w-80 center carousel-link" alt="App de gestión de clases">
           </a>
         </div>
       </div>
