--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/index.js" defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <title>Adrian Diez</title>
 </head>
-<body style="margin:0">
+<body style="margin:0" onload="cargarNoticia()">
   <header>
     <div id="header" style="position:sticky; top:0; left:0; height:12.5%;display:flex;align-items: center; justify-content: space-between;padding:12px;background:#021C2C; color:#058F62">
       <div id="logo">
@@ -66,18 +68,9 @@
   </section>
   <section id="news"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
-    <h1 style="color:#0AC88A">Tech news</h1>
-    <div>
-      <h2 id="news-title" style="color:#0AC88A">
-        GPT-4 destroza a ChatGPT en exámenes universitarios, ¿pero realmente importa?
-      </h2>
-      <h4 id="news-subtitle">
-        Según OpenAI, GPT-4 es todavía mejor que ChatGPT para aprobar exámenes universitarios y de posgrado. Un logro impactante, sin dudas, pero que al final del día sigue sin importar demasiado.
-      </h4>
-      <div class="cta-btn" style="color:#000">Leer más</div>
+  
+   <!-- Content is auto injected here from cargarNoticia() -->
 
-
-    </div>
   </section>
   <section id="prod-present" style="width:80vw;background:#021C2C;margin-right: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3; padding:2rem">
@@ -117,10 +110,19 @@
   </section>
   <section id="sitios-de-interes" style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
-    <h2>Sitios de interés</h2>
-    Para aprender a programar <br>
-    Para practicar <br>
-    Para ---
+    <h2 style="color:#0AC88A">Sitios de interés</h2>
+    <h5>Para aprender a programar</h5>
+    <ul>
+      <li>FreeCodeCamp</li>
+      <li></li>
+      <li></li>
+    </ul>
+    <h5>Para practicar</h5>
+    <ul>
+      <li>Hackerrank</li>
+      <li>Codewars</li>
+      <li>FreeCodeCamp</li>
+    </ul>
   </section>
   <footer>
    
