changing headers and adding color classes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li style="color:var(--secondary-light-2)"><strong>Home</strong></li>
-          <li>Work</li>
-          <li>About</li>
+          <a href="#" class="header-tag secondary-l-2"><li><strong>Home</strong></li></a>
+          <a href="views/galeria.html" class="header-tag secondary-l"><li>Work</li></a>
+          <a href="views/contacto.html" class="header-tag secondary-l"><li>About</li></a>
         </ul>
 
       </div>
