--- a/index.html
+++ b/index.html
@@ -32,65 +32,70 @@
       </div>
     </div>
   </header>
-  <section id="intro">
-    <article id="intro-container" style="width:80vw;background:#021C2C;margin-right: 10vw;
-    margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;">
-      <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
-        <div id="name-container" style="float:left; width:50vw;">
-          <h1 id="name" style="text-align:center; color:#0AC88A; font-size:3em">
-            ADRIAN <br> DIEZ
-          </h1>
+  
+  <main>
+    <section id="intro">
+      <article id="intro-container">
+        <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
+          <div id="name-container" style="float:left; width:50vw;">
+            <h1 id="name" style="text-align:center; color:#0AC88A; font-size:3em">
+              ADRIAN <br> DIEZ
+            </h1>
+          </div>
         </div>
-      </div>
-      <div id="description-container" style="margin-top: 40px; padding: 12px; color:#058F62">
-        <ul>
-          <li>Full Stack Programmer</li>
-          <li>Front and Back End Developer</li>
-          <li>Data Analyst</li>
-        </ul>
-      </div>
-      <div id="photo-container" style="width:480px;height:320px; position:absolute; right:260px;top:200px">
-        <ul class="slideshow">
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-        </ul>
-      </div>
-      <div id="cta-container" style="position: relative;
-      left: 342px;
-      bottom: 34px;">
-        <a href="#prod-present"><span class="cta-btn">Explorar</span></a>
-        <a href="/views/presupuesto.html"><span class="cta-btn">Contrata mis servicios</span></a>
-      </div>
-    </article>
-  </section>
-  <section id="news"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
-  margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
+        <div id="description-container" style="margin-top: 40px; padding: 12px; color:#058F62">
+          <ul>
+            <li>Full Stack Programmer</li>
+            <li>Front and Back End Developer</li>
+            <li>Data Analyst</li>
+          </ul>
+        </div>
+        <div id="photo-container" style="width:480px;height:320px; position:absolute; right:260px;top:200px">
+          <ul class="slideshow">
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+          </ul>
+        </div>
+        <div id="cta-container" style="position: relative;
+        left: 342px;
+        bottom: 34px;">
+          <a href="#prod-present"><span class="cta-btn">Explorar</span></a>
+          <a href="/views/presupuesto.html"><span class="cta-btn">Contrata mis servicios</span></a>
+        </div>
+      </article>
+    </section>
+    <section id="news">
+    
+     <!-- Content is auto injected here from cargarNoticia() -->
   
-   <!-- Content is auto injected here from cargarNoticia() -->
+    </section>
+  
+    <section id="reviews">
+      <h2>Opiniones</h2>
+      lkasjhfjkslahfkljashfkljashljk
+    </section>
+    
+    <section id="sitios-de-interes">
+      <h2 style="color:#0AC88A">Sitios de interés</h2>
+      <h5>Para aprender a programar</h5>
+      <ul>
+        <li>FreeCodeCamp</li>
+        <li></li>
+        <li></li>
+      </ul>
+      <h5>Para practicar</h5>
+      <ul>
+        <li>Hackerrank</li>
+        <li>Codewars</li>
+        <li>FreeCodeCamp</li>
+      </ul>
+    </section>
+  </main>
 
-  </section>
-  
-  <section id="sitios-de-interes" style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
-  margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
-    <h2 style="color:#0AC88A">Sitios de interés</h2>
-    <h5>Para aprender a programar</h5>
-    <ul>
-      <li>FreeCodeCamp</li>
-      <li></li>
-      <li></li>
-    </ul>
-    <h5>Para practicar</h5>
-    <ul>
-      <li>Hackerrank</li>
-      <li>Codewars</li>
-      <li>FreeCodeCamp</li>
-    </ul>
-  </section>
-  <footer>
-   
+  <footer> 
     <div id="footer-container" style="width:100vw;display:flex;align-items: center; justify-content: space-around;padding:12px;background:#021C2C; color:#058F62;margin-top:12px;">
       <div id="footer-enlaces">
         <h5>Enlaces útiles</h5>
