opinions and card done

--- a/index.html
+++ b/index.html
@@ -75,11 +75,36 @@
   
     <section id="reviews">
       <h2>Opiniones</h2>
-      lkasjhfjkslahfkljashfkljashljk
+      <div id="card-container">
+        <div class="card">
+          <h4 class="card-title">
+            appskairos
+          </h4>
+          <h5 class="card-text">
+            Calidad precio de lo mejor que he visto, y llevo mas de 15 años en el sector. Tiene una cosa muy buena que es saber buscarse la vida cuando no sabe algo y acabar sacandolo, tambien aporta ideas a los proyectos y es muy facil tratar con el. Volvere a trabajar con el, de hecho ya mismo lo voy a recontratar.
+          </h5>
+        </div>
+        <div class="card">
+          <h4 class="card-title">
+            pilasujorda
+          </h4>
+          <h5 class="card-text">
+            Conoce la materia y ayuda en las dudas
+          </h5>
+        </div>
+        <div class="card">
+          <h4 class="card-title">
+            judeswift13
+          </h4>
+          <h5 class="card-text">
+            He was such a good communicator and delivered a product of great quality. He did an excellent job. I will contact him again for sure! Thank you, Adrián.
+          </h5>
+        </div>
+      </div>
     </section>
     
     <section id="sitios-de-interes">
-      <h2 style="color:#0AC88A">Sitios de interés</h2>
+      <h2>Sitios de interés</h2>
       <h5>Para aprender a programar</h5>
       <ul>
         <li>FreeCodeCamp</li>
