--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </header>
   
-  <main>
+  <main id="index">
     <section id="intro">
       <article id="intro-container">
         <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
@@ -62,7 +62,7 @@
         <div id="cta-container" style="position: relative;
         left: 342px;
         bottom: 34px;">
-          <a href="#prod-present"><span class="cta-btn">Explorar</span></a>
+          <a href="/views/galeria.html"><span class="cta-btn">Explorar</span></a>
           <a href="/views/presupuesto.html"><span class="cta-btn">Contrata mis servicios</span></a>
         </div>
       </article>
@@ -74,7 +74,7 @@
     </section>
   
     <section id="reviews">
-      <h2>Opiniones</h2>
+      <h1>Opiniones</h1>
       <div id="card-container">
         <div class="card">
           <h4 class="card-title">
@@ -104,7 +104,7 @@
     </section>
     
     <section id="sitios-de-interes">
-      <h2>Sitios de interés</h2>
+      <h1>Sitios de interés</h1>
       <h5>Para aprender a programar</h5>
       <ul>
         <li>FreeCodeCamp</li>
