map almost done

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
           </ul>
         </div>
         <div id="cta-container" style="position: relative;
-        left: 342px;
-        bottom: 34px;">
+        left: 200px;
+        bottom: 20px;">
           <a href="/views/galeria.html"><span class="cta-btn">Explorar</span></a>
           <a href="/views/presupuesto.html"><span class="cta-btn">Contrata mis servicios</span></a>
+          <a href="/views/contacto.html"><span class="cta-btn">Dónde encontrarme</span></a>
         </div>
       </article>
     </section>
@@ -108,8 +109,8 @@
       <h5>Para aprender a programar</h5>
       <ul>
         <li>FreeCodeCamp</li>
-        <li></li>
-        <li></li>
+        <li>Codely</li>
+        <li>Codecademy</li>
       </ul>
       <h5>Para practicar</h5>
       <ul>
