--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <a href="#" class="header-tag secondary-l-2"><li><strong>Home</strong></li></a>
-          <a href="views/galeria.html" class="header-tag secondary-l"><li>Work</li></a>
-          <a href="views/contacto.html" class="header-tag secondary-l"><li>About</li></a>
+          <li><a href="#" class="header-tag secondary-l-2"><strong>Home</strong></a></li>
+          <li><a href="views/galeria.html" class="header-tag secondary-l">Work</a></li>
+          <li><a href="views/contacto.html" class="header-tag secondary-l">About</a></li>
         </ul>
 
       </div>
@@ -35,12 +35,13 @@
   
   <main id="index">
     <section id="intro">
+      <h2 style="color:transparent; display:inline;">Adrián Díez</h2>
       <article id="intro-container">
         <div id="name-wrapper" style="width:100%;height:200px; margin-top: 20px;">
           <div id="name-container" style="float:left; width:50vw;">
-            <h1 id="name" style="text-align:center; color:#0AC88A; font-size:3em">
+            <h2 id="name" style="text-align:center; color:#0AC88A; font-size:3em">
               ADRIAN <br> DIEZ
-            </h1>
+            </h2>
           </div>
         </div>
         <div id="description-container" style="margin-top: 40px; padding: 12px; color:#058F62">
@@ -69,6 +70,8 @@
       </article>
     </section>
     <section id="news">
+      <h2 style="color:transparent; display:inline;">Noticias</h2>
+
     
      <!-- Content is auto injected here from cargarNoticia() -->
   
